Rewrite TestUtils::resetApplication
idk, I think it's better? :shrug: