@@ -17,7 +17,7 @@ import java.util.Optional;
 import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.CompletionStage;
-import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.mail.internet.AddressException;
@@ -53,7 +53,9 @@ import edu.ucla.library.prl.harvester.Param;
 import io.ino.solrs.JavaAsyncSolrClient;
 import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
+import io.vertx.core.buffer.Buffer;
 import io.vertx.core.json.JsonObject;
+import io.vertx.ext.web.client.HttpResponse;
 import io.vertx.ext.web.client.WebClient;
 import io.vertx.ext.web.client.predicate.ResponsePredicate;
 import io.vertx.sqlclient.Pool;
@@ -263,28 +265,27 @@ public final class TestUtils {
      */
     public static Future<Void> resetApplication(final WebClient aWebClient) {
         return aWebClient.get(JOBS).send().compose(response -> {
-            final Stream<Integer> jobIDs =
-                    response.bodyAsJsonArray().stream().map(job -> unwrapJobID(new Job((JsonObject) job)));
-            @SuppressWarnings("rawtypes")
-            final Function<Integer, Future> deleteJob = id -> {
+            // First, delete all the jobs
+            final Stream<Future<HttpResponse<Buffer>>> jobDeletions = response.bodyAsJsonArray().stream().map(job -> {
+                final int id = unwrapJobID(new Job((JsonObject) job));
                 final String uri = JOB.expandToString(getUriTemplateVars(id));
 
                 return aWebClient.delete(uri).expect(ResponsePredicate.SC_NO_CONTENT).send();
-            };
+            });
 
-            return CompositeFuture.all(jobIDs.map(deleteJob).toList());
+            return CompositeFuture.all(jobDeletions.collect(Collectors.toList()));
         }).compose(result -> {
             return aWebClient.get(INSTITUTIONS).send().compose(response -> {
-                final Stream<Integer> instIDs = response.bodyAsJsonArray().stream()
-                        .map(inst -> unwrapInstitutionID(new Institution((JsonObject) inst)));
-                @SuppressWarnings("rawtypes")
-                final Function<Integer, Future> deleteInst = id -> {
-                    final String uri = INSTITUTION.expandToString(getUriTemplateVars(id));
+                // Then, delete all the institutions
+                final Stream<Future<HttpResponse<Buffer>>> instDeletions =
+                        response.bodyAsJsonArray().stream().map(institution -> {
+                            final int id = unwrapInstitutionID(new Institution((JsonObject) institution));
+                            final String uri = INSTITUTION.expandToString(getUriTemplateVars(id));
 
-                    return aWebClient.delete(uri).expect(ResponsePredicate.SC_NO_CONTENT).send();
-                };
+                            return aWebClient.delete(uri).expect(ResponsePredicate.SC_NO_CONTENT).send();
+                        });
 
-                return CompositeFuture.all(instIDs.map(deleteInst).toList());
+                return CompositeFuture.all(instDeletions.collect(Collectors.toList()));
             });
         }).mapEmpty();
     }
